[package]
name = "php-ext-wasm"
version = "0.2.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"

[lib]

[dependencies]
wasmer-runtime-c-api = { version = "^0.2.1" }

[build-dependencies]
walkdir = "2.2"

[patch.crates-io]
wasmer-runtime-c-api = { path = "/Users/hywan/Development/Wasmer/wasmer/lib/runtime-c-api/" }