[package]
publish = false
name = "php-ext-wasm"
version = "0.5.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"
description = "PHP extension to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmer/php-ext-wasm"
keywords = ["php", "extension", "webassembly"]
categories = ["wasm"]

[lib]

[dependencies]
wasmer-runtime-c-api = "0.7.0"